# flight_bookings

./: .env  Dockerfile  Dockerfile copy  README.md  docker-compose.yml  pyproject.toml  requirements.txt
flight_booking/: settings.py  urls.py
flights/: admin.py  urls.py
flights/migrations/: 0001_initial.py
flights/models/: __init__.py  flight.py  ticket.py
flights/serializers/: __init__.py  flight.py  ticket.py  user.py
flights/views/: __init__.py  flight.py  ticket.py  user.py
